# factory

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: 01-scaffold-infrastructure.md  02-build-execution-sandbox.md  03-build-discovery-agents.md  04-build-governance-reviewer.md  05-system-orchestration.md  06-implementation-backlog.md  07-concept-success-criteria.md  08-schema-versioning.md  design-critique.md  design-doc.md
infrastructure/docker/: manager.Dockerfile  runner.Dockerfile
schemas/: artifact.schema.json  lease.schema.json  policy_report.schema.json  run.schema.json  ticket.schema.json
scripts/: export_schemas.py
src/software_factory/: config.py
src/software_factory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/software_factory/core/: __init__.py  models.py
src/software_factory/core/adapters/: __init__.py  interface.py
src/software_factory/core/backlog/: __init__.py  errors.py  interface.py  sqlalchemy_backlog.py
src/software_factory/core/queue/: __init__.py  interface.py  redis_queue.py
src/software_factory/core/sandbox/: __init__.py
src/software_factory/core/supervisor/: __init__.py  run_supervisor.py
src/software_factory/db/: models.py  session.py
src/software_factory/services/execution/: __init__.py
src/software_factory/services/manager/: __init__.py  api.py
src/software_factory/services/runner/: __init__.py  main.py
tests/: conftest.py  helpers.py  test_backlog.py  test_supervisor.py
