[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "software-factory"
version = "0.1.0"
description = "Harness-first autonomous software factory control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.2,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "redis>=5.0.8,<6.0.0",
  "SQLAlchemy>=2.0.34,<3.0.0",
  "uvicorn>=0.30.6,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2,<2.0.0",
  "pytest>=8.3.2,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.3,<1.0.0",
  "types-requests>=2.32.0.20240914"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --cov=software_factory --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = []
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["alembic.*", "redis.*"]
ignore_missing_imports = true
